# mdopt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CNAME  CODE_OF_CONDUCT.md  LICENSE.md  README.md  README.rst  codecov.yml  generate_docs.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bugreport.yml  config.yml  newfeature.yml
.github/hooks/: .pre-commit-config.yaml
.github/workflows/: actions.yml  build_docs.yml  cd.yml  ci.yml  codeql-analysis.yml  dependency-review.yml  docs_pages.yml  lint.yml  mypy.yml  tests.yml
docs/: README.rst  conf.py  contractor.rst  examples.rst  index.rst  mdopt.mps.rst  mdopt.optimiser.rst  mdopt.rst  mps.rst  optimiser.rst  requirements.txt  utils.rst
docs/examples/decoding/: classical.ipynb  decoding.py  quantum.ipynb
docs/examples/ising/: ising_parallel.py
docs/source/: README.rst  api_reference.rst  classical_ldpc.ipynb  conf.py  contributing.rst  csp_codes.ipynb  examples.rst  examples_auto.rst  getting_started.rst  ground_state.ipynb  hypergraph_product.ipynb  index.rst  main_component.ipynb  maxbonddim.ipynb  mdopt.optimiser.rst  mdopt.rst  mdopt.utils.rst  modules.rst  mpopt.contractor.rst  mpopt.mps.rst  mpopt.optimiser.rst  mpopt.rst  mpopt.utils.rst  mps-rand-circ.ipynb  plotting.ipynb  project_overview.rst  quantum_csp.ipynb  quantum_five_qubit.ipynb  quantum_hypergraph_product.ipynb  quantum_hypergraph_tmp.ipynb  quantum_surface copy.ipynb  quantum_surface.ipynb  quantum_surface_playground.ipynb  quantum_three_qubit.ipynb  requirements.txt  shor.ipynb  surface.ipynb  testing.rst  toric.ipynb
docs/source/api/: mdopt.contractor.contractor.rst  mdopt.contractor.rst  mdopt.mps.canonical.rst  mdopt.mps.explicit.rst  mdopt.mps.rst  mdopt.mps.utils.rst  mdopt.rst  (+6 more)
examples/: decoding_classical.py  ising.py  ising_parallel.py
examples/decoding/: classical.ipynb  classical.py  classical.sh  classical_ldpc.ipynb  classical_ldpc.py  classical_ldpc.sh  classical_ldpc_cc.sh  cleanup.sh  cleanup_cc.sh  data_handling.py  decoding.py  dephasing_dmrg_debug_bb.ipynb  failing_svd.ipynb  hypergraph_product.ipynb  maxbonddim.ipynb  plotting-classical-ldpc.ipynb  plotting-quantum-surface.ipynb  plotting_quantum_surface.ipynb  quantum.ipynb  quantum_bivariate_bicycle.py  quantum_bivariate_bicycle.sh  quantum_bivariate_bicycle_cc.sh  quantum_csp.py  quantum_csp.sh  quantum_csp_bp.py  quantum_csp_cc.sh  quantum_five_qubit.ipynb  quantum_hypergraph_product.ipynb  quantum_hypergraph_product.py  quantum_hypergraph_product.sh  quantum_hypergraph_product_cc.sh  quantum_surface.ipynb  quantum_surface.py  quantum_surface.sh  quantum_surface_cc.sh  shor.ipynb  submit-job.sh  toric.ipynb  untitled.ipynb  visualisation.py
examples/ising/: ground_state.ipynb  ground_state_problem.ipynb  ising.py  ising_parallel.py
examples/main_component/: main_component.ipynb
examples/misc/: gpu_example.ipynb
examples/random_circuit/: mps-rand-circ.ipynb  mps-rand-circ.py  random_circuit.py  random_circuit.sh  submit-job.sh
experiments/: decoder.py  decoding_classical.py  ising.py  ising_parallel.py  playground.ipynb  sandbox.ipynb
mdopt/backend/: array.py
mdopt/contractor/: contractor.py
mdopt/mps/: canonical.py  explicit.py  utils.py
mdopt/optimiser/: dephasing_dmrg.py  dmrg.py  utils.py
mdopt/utils/: utils.py
mpopt/: __init__.py  common_tensors.py  utils.py
mpopt/canonical/: LDPC_decoder_pyqec.py  batch_params.json  classical_ldpc_decoder - Copy.py  code_selector.py  crappy_old_decoder.py  decoder_params.json  exact_v_dmrg.py  grut.py  main_component_study.py  mps_maker.py  param_dict_list.json  params_batch_set.py  tensorcsp.py  test.py
mpopt/contractions/: LDPC_study_pyqec.py  MPS_projection.py  Random_MPS_generator.py  TNTools.py  counteractors.py
mpopt/contractor/: Contractor.py  MPS.py  __init__.py  contractor.py  mps.py
mpopt/dmrg/: DMRG.py
mpopt/mps/: MPS.py  __init__.py  canonical.py  explicit.py  utils.py
mpopt/optimiser/: __init__.py  dephasing_dmrg.py  dmrg.py
mpopt/optimizer/: __init__.py  dmrg.py
mpopt/utils/: utils.py
paper/: paper.bib  paper.md
tests/: __init__.py  test_TNTools.py  test_counteracters.py  test_mpopt.py  tests.py
tests/contractor/: test_contractor.py
tests/dmrg/: test_dmrg.py
tests/mps/: test_canonical.py  test_explicit.py  test_utils.py
tests/optimiser/: test_dephasing_dmrg.py  test_dmrg.py  test_utils.py
tests/optimizer/: test_dmrg.py
tests/utils/: test_utils.py
(+22 files in other folders)
