[tool.poetry]
name = "mdopt"
version = "0.3.0"
description = "Discrete optimisation in the tensor-network (specifically, MPS-MPO) language."
authors = [
    "Aleksandr Berezutskii <berezutskii.aleksandr@gmail.com>",
]
maintainers = [
    "Aleksandr Berezutskii <berezutskii.aleksandr@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
scipy = "^1.9.2"
numpy = "^1.20.1"
opt-einsum = "^3.3.0"
more-itertools = ">=8.12,<10.0"
threadpoolctl = "^3.1.0"
tqdm = "^4.64.1"
qecstruct = "^0.2.9"
qecsim = "^1.0b9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=22.3,<24.0"
pylint = "^2.17.2"
setuptools = "^67.7.1"
mypy = "^1.1"
ipykernel = "^6.21.1"
notebook = "^6.5.3"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = ">=6.4.4,<8.0.0"
pytest-cov = ">=3,<5"
pytest = "^7.3.0"
py = "^1.11.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.7.0"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^1.0.0"
nbsphinx = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
