[project]
name = "mdopt"
version = "1.0.1"
description = "Discrete optimisation in the tensor-network (specifically, MPS-MPO) language."
authors = [
    { name = "Aleksandr Berezutskii", email = "berezutskii.aleksandr@gmail.com" },
]
maintainers = [
    { name = "Aleksandr Berezutskii", email = "berezutskii.aleksandr@gmail.com" },
]
readme = "README.md"
keywords = [ "tensor networks", "quantum error correction", "discrete optimisation", "MPS", "MPO", "python", "decoding" ]
requires-python = ">=3.10,<4.0"

dependencies = [
    "scipy>=1.9.2,<2.0.0",
    "opt-einsum>=3.3.0,<4.0.0",
    "more-itertools>=8.12,<11.0",
    "threadpoolctl>=3.1.0,<4.0.0",
    "tqdm>=4.64.1,<5.0.0",
    "qecstruct>=0.2.9,<0.3.0",
    "qecsim>=1.0b9,<2.0.0",
    "matrex>=0.0.1,<0.0.2",
    "numpy<2.2.0",
    "qldpc>=0.1.2,<0.2.0",
    "sympy>=1.14.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "ldpc>=2.3.6,<3.0.0",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=22.3,<26.0"
pylint = ">=2.17.4,<4.0.0"
setuptools = ">=67.8,<81.0"
mypy = "^1.3"
ipykernel = "^6.23.1"
notebook = ">=6.5.3,<8.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
pyinstrument = "^5.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = ">=6.4.4,<8.0.0"
pytest-cov = ">=3,<7"
pytest = ">=7.3,<9.0"
py = "^1.11.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
matplotlib = "^3.7.0"
Sphinx = ">=6.2.1,<9.0.0"
myst-parser = ">=2,<5"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.9.2"
pygments = "^2.17.2"
ipython = "^8.22.1"
pydata-sphinx-theme = ">=0.16.1,<0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"